lung cancer project launch

--- a/notebooks/reading_data.ipynb
+++ b/notebooks/reading_data.ipynb
@@ -76,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# what type of image should I take during my training.? T2? autre?"
+    "# what type of image should I take during my training.? T2? autre?\n",
+    "# ah so wtf the api is only for CT scans? so no prostate?"
    ]
   }
  ],
