pushing some code

--- a/notebooks/CT_Foundation_Demo.ipynb
+++ b/notebooks/CT_Foundation_Demo.ipynb
@@ -673,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 25,
       "metadata": {
         "id": "mzI0A92hH5VZ"
       },
@@ -717,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 28,
       "metadata": {
         "id": "v1cEUPaH90DV"
       },
@@ -740,11 +740,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 32,
       "metadata": {
         "id": "YnAmHU5mA88c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'tensorflow_models'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[32], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtensorflow_models\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtfm\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mcreate_model\u001b[39m(heads,\n\u001b[1;32m      6\u001b[0m                  token_num\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m      7\u001b[0m                  embeddings_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1408\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     13\u001b[0m                  weight_decay\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0001\u001b[39m,\n\u001b[1;32m     14\u001b[0m                  seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m tf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mModel:\n\u001b[1;32m     15\u001b[0m \u001b[38;5;250m  \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124;03m  Creates linear probe or multilayer perceptron using LARS.\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow_models'"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "import tensorflow_models as tfm\n",
@@ -805,6 +817,129 @@
         "        tf.keras.metrics.AUC(),\n",
         "        tf.keras.metrics.AUC(curve='PR', name='auc_pr')])\n",
         "  return model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting tf-models-official\n",
+            "  Using cached tf_models_official-2.18.0-py2.py3-none-any.whl.metadata (1.5 kB)\n",
+            "Requirement already satisfied: Cython in /Users/naimsassine/miniforge3/lib/python3.12/site-packages (from tf-models-official) (3.0.11)\n",
+            "Requirement already satisfied: Pillow in /Users/naimsassine/miniforge3/lib/python3.12/site-packages (from tf-models-official) (11.1.0)\n",
+            "INFO: pip is looking at multiple versions of tf-models-official to determine which version is compatible with other requirements. This could take a while.\n",
+            "  Using cached tf_models_official-2.17.0-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "Collecting gin-config (from tf-models-official)\n",
+            "  Using cached gin_config-0.5.0-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Collecting google-api-python-client>=1.6.7 (from tf-models-official)\n",
+            "  Using cached google_api_python_client-2.160.0-py2.py3-none-any.whl.metadata (6.7 kB)\n",
+            "Collecting immutabledict (from tf-models-official)\n",
+            "  Using cached immutabledict-4.2.1-py3-none-any.whl.metadata (3.5 kB)\n",
+            "Collecting kaggle>=1.3.9 (from tf-models-official)\n",
+            "  Using cached kaggle-1.6.17-py3-none-any.whl\n",
+            "Requirement already satisfied: matplotlib in /Users/naimsassine/miniforge3/lib/python3.12/site-packages (from tf-models-official) (3.10.0)\n",
+            "Requirement already satisfied: numpy>=1.20 in /Users/naimsassine/miniforge3/lib/python3.12/site-packages (from tf-models-official) (2.0.2)\n",
+            "Collecting oauth2client (from tf-models-official)\n",
+            "  Using cached oauth2client-4.1.3-py2.py3-none-any.whl.metadata (1.2 kB)\n",
+            "Collecting opencv-python-headless (from tf-models-official)\n",
+            "  Using cached opencv_python_headless-4.11.0.86-cp37-abi3-macosx_13_0_arm64.whl.metadata (20 kB)\n",
+            "Requirement already satisfied: pandas>=0.22.0 in /Users/naimsassine/miniforge3/lib/python3.12/site-packages (from tf-models-official) (2.2.3)\n",
+            "Requirement already satisfied: psutil>=5.4.3 in /Users/naimsassine/miniforge3/lib/python3.12/site-packages (from tf-models-official) (6.1.1)\n",
+            "Collecting py-cpuinfo>=3.3.0 (from tf-models-official)\n",
+            "  Using cached py_cpuinfo-9.0.0-py3-none-any.whl.metadata (794 bytes)\n",
+            "Collecting pycocotools (from tf-models-official)\n",
+            "  Using cached pycocotools-2.0.8-cp312-cp312-macosx_10_9_universal2.whl.metadata (1.1 kB)\n",
+            "Collecting pyyaml>=6.0.0 (from tf-models-official)\n",
+            "  Using cached PyYAML-6.0.2-cp312-cp312-macosx_11_0_arm64.whl.metadata (2.1 kB)\n",
+            "Collecting sacrebleu (from tf-models-official)\n",
+            "  Using cached sacrebleu-2.5.1-py3-none-any.whl.metadata (51 kB)\n",
+            "Collecting scipy>=0.19.1 (from tf-models-official)\n",
+            "  Using cached scipy-1.15.1-cp312-cp312-macosx_14_0_arm64.whl.metadata (61 kB)\n",
+            "Collecting sentencepiece (from tf-models-official)\n",
+            "  Using cached sentencepiece-0.2.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (7.7 kB)\n",
+            "Collecting seqeval (from tf-models-official)\n",
+            "  Using cached seqeval-1.2.2-py3-none-any.whl\n",
+            "Requirement already satisfied: six in /Users/naimsassine/miniforge3/lib/python3.12/site-packages (from tf-models-official) (1.17.0)\n",
+            "Collecting tensorflow-datasets (from tf-models-official)\n",
+            "  Using cached tensorflow_datasets-4.9.7-py3-none-any.whl.metadata (9.6 kB)\n",
+            "Collecting tensorflow-hub>=0.6.0 (from tf-models-official)\n",
+            "  Using cached tensorflow_hub-0.16.1-py2.py3-none-any.whl.metadata (1.3 kB)\n",
+            "Collecting tensorflow-model-optimization>=0.4.1 (from tf-models-official)\n",
+            "  Using cached tensorflow_model_optimization-0.8.0-py2.py3-none-any.whl.metadata (904 bytes)\n",
+            "Collecting tf-models-official\n",
+            "  Using cached tf_models_official-2.16.0-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "  Using cached tf_models_official-2.15.0-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "  Using cached tf_models_official-2.14.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "  Using cached tf_models_official-2.14.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "  Using cached tf_models_official-2.14.0-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "  Using cached tf_models_official-2.13.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "INFO: pip is still looking at multiple versions of tf-models-official to determine which version is compatible with other requirements. This could take a while.\n",
+            "  Using cached tf_models_official-2.13.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "Collecting pyyaml<5.4.0,>=5.1 (from tf-models-official)\n",
+            "  Using cached PyYAML-5.3.1.tar.gz (269 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
+            "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+            "  \n",
+            "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
+            "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+            "  \u001b[31m╰─>\u001b[0m \u001b[31m[37 lines of output]\u001b[0m\n",
+            "  \u001b[31m   \u001b[0m Traceback (most recent call last):\n",
+            "  \u001b[31m   \u001b[0m   File \"<string>\", line 2, in <module>\n",
+            "  \u001b[31m   \u001b[0m   File \"<pip-setuptools-caller>\", line 34, in <module>\n",
+            "  \u001b[31m   \u001b[0m   File \"/private/var/folders/zz/_92br08s7958kmhq5t_gm3rm0000gp/T/pip-install-gpuawg50/pyyaml_90d609665d534dcdb59af3ec881f94e3/setup.py\", line 291, in <module>\n",
+            "  \u001b[31m   \u001b[0m     setup(\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/_distutils/core.py\", line 183, in setup\n",
+            "  \u001b[31m   \u001b[0m     return run_commands(dist)\n",
+            "  \u001b[31m   \u001b[0m            ^^^^^^^^^^^^^^^^^^\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/_distutils/core.py\", line 199, in run_commands\n",
+            "  \u001b[31m   \u001b[0m     dist.run_commands()\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/_distutils/dist.py\", line 954, in run_commands\n",
+            "  \u001b[31m   \u001b[0m     self.run_command(cmd)\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/dist.py\", line 995, in run_command\n",
+            "  \u001b[31m   \u001b[0m     super().run_command(command)\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/_distutils/dist.py\", line 973, in run_command\n",
+            "  \u001b[31m   \u001b[0m     cmd_obj.run()\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/command/egg_info.py\", line 313, in run\n",
+            "  \u001b[31m   \u001b[0m     self.find_sources()\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/command/egg_info.py\", line 321, in find_sources\n",
+            "  \u001b[31m   \u001b[0m     mm.run()\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/command/egg_info.py\", line 544, in run\n",
+            "  \u001b[31m   \u001b[0m     self.add_defaults()\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/command/egg_info.py\", line 582, in add_defaults\n",
+            "  \u001b[31m   \u001b[0m     sdist.add_defaults(self)\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/command/sdist.py\", line 109, in add_defaults\n",
+            "  \u001b[31m   \u001b[0m     super().add_defaults()\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/_distutils/command/sdist.py\", line 238, in add_defaults\n",
+            "  \u001b[31m   \u001b[0m     self._add_defaults_ext()\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/_distutils/command/sdist.py\", line 323, in _add_defaults_ext\n",
+            "  \u001b[31m   \u001b[0m     self.filelist.extend(build_ext.get_source_files())\n",
+            "  \u001b[31m   \u001b[0m                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  \u001b[31m   \u001b[0m   File \"/private/var/folders/zz/_92br08s7958kmhq5t_gm3rm0000gp/T/pip-install-gpuawg50/pyyaml_90d609665d534dcdb59af3ec881f94e3/setup.py\", line 199, in get_source_files\n",
+            "  \u001b[31m   \u001b[0m     self.cython_sources(ext.sources, ext)\n",
+            "  \u001b[31m   \u001b[0m     ^^^^^^^^^^^^^^^^^^^\n",
+            "  \u001b[31m   \u001b[0m   File \"/Users/naimsassine/miniforge3/lib/python3.12/site-packages/setuptools/_distutils/cmd.py\", line 107, in __getattr__\n",
+            "  \u001b[31m   \u001b[0m     raise AttributeError(attr)\n",
+            "  \u001b[31m   \u001b[0m AttributeError: cython_sources\n",
+            "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+            "  \n",
+            "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+            "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
+            "\n",
+            "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
+            "\u001b[31m╰─>\u001b[0m See above for output.\n",
+            "\n",
+            "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
+            "\u001b[1;36mhint\u001b[0m: See above for details.\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install tf-models-official"
       ]
     },
     {
